add: nginx 리다이렉트 api 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -38,6 +38,14 @@ server {
             proxy_pass http://auth:8080/join;
        }
 
+       location ~* /user/(.*) {
+            limit_except GET POST PETCH DELET {
+                deny all;
+            }
+            include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://auth:8080/user/$1;
+       }
+
        location = /reissue {
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth:8080/reissue;
