add: nginx 오타 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -39,7 +39,7 @@ server {
        }
 
        location ~* /user/(.*) {
-            limit_except GET POST PETCH DELET {
+            limit_except GET POST PATCH DELET {
                 deny all;
             }
             include /etc/nginx/conf.d/header.conf;
