--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -59,6 +59,11 @@ server {
             proxy_pass http://auth:8080/verify;
         }
 
+        location ~* /docs/(.*)$ {
+            include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://swagger-$1:8080;
+        }
+
        location ~* /todo/(.*)$ {
             set $auth_request '';
 
