fix: nginx 리다이렉트 패턴 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -38,12 +38,12 @@ server {
             proxy_pass http://auth:8080/join;
        }
 
-       location ~* /user/(.*) {
+       location /user {
             limit_except GET POST PATCH DELETE {
                 deny all;
             }
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth:8080/user/$1;
+            proxy_pass http://auth:8080/user;
        }
 
        location = /reissue {
