--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -8,8 +8,7 @@ plugins {
 
 openapi3 {
 	servers = [
-			{ url = "http://swagger-auth" },
-			{ url = "http://harpsharp.com/swagger/auth" }
+			{ url = "http://harpsharp.com" }
 	]
 	title = "Harp Sharp Auth API"
 	description = "Harp Sharp 회원가입, 회원 정보 수정, JWT 인증/인가와 관련된 API입니다."
