--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -42,8 +42,21 @@ server {
             limit_except GET POST PATCH DELETE {
                 deny all;
             }
+
+            if ($request_method == 'PATCH') {
+
+                proxy_redirect off;
+                proxy_intercept_errors on;
+                error_page 301 302 307 = @handle_redirect;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth:8080/user;
+       }
+
+       location @handle_redirect {
+            set $saved_redirect_location $upstream_http_location;
+            proxy_pass $saved_redirect_location;
        }
 
        location = /reissue {
