fix: nginx 리다이렉트 설정 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -43,13 +43,9 @@ server {
                 deny all;
             }
 
-            if ($request_method == 'PATCH') {
-
-                proxy_redirect off;
-                proxy_intercept_errors on;
-                error_page 301 302 307 = @handle_redirect;
-            }
-
+            proxy_redirect off;
+            proxy_intercept_errors on;
+            error_page 301 302 307 308 = @handle_redirect;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth:8080/user;
        }
