--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -9,7 +9,7 @@ plugins {
 openapi3 {
 	servers = [
 			{ url = "http://localhost:8080"},
-			{ url = "http://harpsharp.com" }
+			{ url = "http://harpsharp.com/docs/auth" }
 	]
 	title = "Harp Sharp Auth API"
 	description = "Harp Sharp 회원가입, 회원 정보 수정, JWT 인증/인가와 관련된 API입니다."
