--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -60,9 +60,9 @@ server {
             proxy_pass http://auth:8080/verify;
         }
 
-        location ~* /docs/(.*)$ {
+        location = /docs/auth {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://swagger-$1:8080;
+            proxy_pass http://swagger-auth:8080;
         }
 
        location ~* /todo/(.*)$ {
