fix: nginx conf 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -60,7 +60,8 @@ server {
             proxy_pass http://auth:8080/verify;
         }
 
-        location = /docs/auth {
+        location ~* /docs/(.*)$ {
+            rewrite ^/docs/.*$ / break;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://swagger-auth:8080;
         }
