--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -6,3 +6,4 @@ proxy_set_header Connection "upgrade";
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header Authorization $http_authorization;
 proxy_set_header Cookie $http_cookie;
+proxy_http_version 1.1;
