fix: nginx base url 확장

--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -9,7 +9,10 @@ plugins {
 openapi3 {
 	servers = [
 			{ url = "http://localhost:8080"},
-			{ url = "http://harpsharp.com/docs/auth" }
+			{ url = "http://harpsharp.com/docs/auth" },
+			{ url = "https://harpsharp.com/docs/auth"},
+			{ url = "http://harpsharp.com"},
+			{ url = "https://harpsharp.com"}
 	]
 	title = "Harp Sharp Auth API"
 	description = "Harp Sharp 회원가입, 회원 정보 수정, JWT 인증/인가와 관련된 API입니다."
