--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     container_name: swagger-auth
     volumes:
       - ./:/tmp
-    expose:
-      - "8080"
+    ports:
+      - "80:8080"
     environment:
       - SWAGGER_JSON=/tmp/authAPI.json
     networks:
