fix: swagger-ui 설정 롤백

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -63,7 +63,7 @@ server {
         location = /docs/auth {
             rewrite ^/docs/.*$ / break;
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://swagger-auth:8080/;
+            proxy_pass http://swagger-auth:8080;
         }
 
        location ~* /todo/(.*)$ {
