fix: swagger-ui 설정 롤백

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -61,7 +61,7 @@ server {
         }
 
         location = /docs/auth {
-            rewrite ^/docs/.*$ / break;
+            rewrite ^/docs/.*$ break;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://swagger-auth:8080;
         }
