--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -8,3 +8,5 @@ proxy_set_header Authorization $http_authorization;
 proxy_set_header Cookie $http_cookie;
 proxy_http_version 1.1;
 add_header 'Access-Control-Allow-Origin' '*';
+add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
