add: 게시글 작성/수정/삭제 시 인가/인증 로직 추가

--- a/board/build.gradle
+++ b/board/build.gradle
@@ -19,6 +19,7 @@ openapi3 {
 }
 
 dependencies {
+	implementation	   project(':auth')
 	implementation 	   project(':infra_rds')
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
