--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -79,15 +79,51 @@ server {
             proxy_pass http://todo:8080/$1;
        }
 
-       location ~* /board/(.*)$ {
-            set $auth_request '';
+       location ~ /board/posts(/(.*))?$ {
+           set $auth_request '';
 
-            if ($request_method != 'GET') {
-                set $auth_request '/verify';
-            }
+           if ($request_method != 'GET') {
+               set $auth_request '/verify/posts';
+           }
 
-            auth_request $auth_request;
-            include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://todo:8080/$1;
+           auth_request $auth_request;
+           include /etc/nginx/conf.d/header.conf;
+
+           set $post_id $2;
+
+           # $post_id가 빈 문자열일 경우 처리
+           if ($post_id = '') {
+               proxy_pass http://board:8080/board/posts;
+           }
+
+           # $post_id가 존재할 경우 처리
+           if ($post_id != '') {
+               proxy_pass http://board:8080/board/posts/$post_id;
+           }
        }
+
+
+       location ~ /board/posts/(.*)/comments(/(.*))?$ {
+           set $auth_request '';
+
+           if ($request_method != 'GET') {
+               set $auth_request '/verify/comments';
+           }
+
+           auth_request $auth_request;
+           include /etc/nginx/conf.d/header.conf;
+
+           set $comment_id $3;
+
+           # $3이 빈 문자열일 경우 처리
+           if ($comment_id = '') {
+               proxy_pass http://board:8080/board/posts/$1/comments;
+           }
+
+           # $3이 존재할 경우 처리
+           if ($comment_id != '') {
+               proxy_pass http://board:8080/board/posts/$1/comments/$comment_id;
+           }
+       }
+
 }
