fix: nginx  경로 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -83,7 +83,7 @@ server {
            set $auth_request '';
 
            if ($request_method != 'GET') {
-               set $auth_request '/verify/posts';
+               set $auth_request 'http://auth:8080/verify/posts';
            }
 
            auth_request $auth_request;
@@ -107,7 +107,7 @@ server {
            set $auth_request '';
 
            if ($request_method != 'GET') {
-               set $auth_request '/verify/comments';
+               set $auth_request 'http://auth:8080/verify/comments';
            }
 
            auth_request $auth_request;
