--- a/infra_rds/src/main/resources/application.yml
+++ b/infra_rds/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/harpsharp?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: wlghks24461!
+    password: 1626
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
