fix: nginx comments, posts 리다이렉트 로직 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -93,37 +93,41 @@ server {
 
            # $post_id가 빈 문자열일 경우 처리
            if ($post_id = '') {
-               proxy_pass http://board:8080/board/posts;
+               set $post_path "/board/posts";
            }
 
            # $post_id가 존재할 경우 처리
            if ($post_id != '') {
-               proxy_pass http://board:8080/board/posts/$post_id;
+               set $post_path "/board/posts/$post_id";
            }
+
+           proxyy_pass http://board:8080$post_path;
        }
 
 
-       location ~ /board/posts/(.*)/comments(/(.*))?$ {
-           set $auth_request '';
+        location ~ /board/posts/(.*)/comments(/(.*))?$ {
+            set $auth_request '';
 
-           if ($request_method != 'GET') {
-               set $auth_request 'http://auth:8080/verify/comments';
-           }
+            if ($request_method != 'GET') {
+                set $auth_request 'http://auth:8080/verify/comments';
+            }
 
-           auth_request $auth_request;
-           include /etc/nginx/conf.d/header.conf;
+            auth_request $auth_request;
+            include /etc/nginx/conf.d/header.conf;
 
-           set $comment_id $3;
+            set $post_id $1;
+            set $comment_id $3;
 
-           # $3이 빈 문자열일 경우 처리
-           if ($comment_id = '') {
-               proxy_pass http://board:8080/board/posts/$1/comments;
-           }
+            # Construct the comments path directly
+            if ($comment_id = '') {
+                set $comments_path "/board/posts/$post_id/comments";
+            }
 
-           # $3이 존재할 경우 처리
-           if ($comment_id != '') {
-               proxy_pass http://board:8080/board/posts/$1/comments/$comment_id;
-           }
-       }
+            if ($comment_id != '') {
+                set $comments_path "/board/posts/$post_id/comments/$comment_id";
+            }
+
+            proxy_pass http://board:8080$comments_path;
+        }
 
 }
