fix: nginx 리다이렉션 경로 수정(/board/posts(/(.*))?$)

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -52,14 +52,6 @@ server {
             proxy_pass http://auth:8080/reissue;
        }
 
-       location = /verify {
-            internal;
-            include /etc/nginx/conf.d/header.conf;
-            proxy_pass_request_body off;  # 본문을 보내지 않음
-            proxy_set_header Content-Length "";
-            proxy_pass http://auth:8080/verify;
-        }
-
         location = /docs/auth {
             rewrite ^/docs/.*$ break;
             include /etc/nginx/conf.d/header.conf;
@@ -81,47 +73,42 @@ server {
 
        location ~ /board/posts(/(.*))?$ {
            set $auth_request '';
+           include /etc/nginx/conf.d/header.conf;
 
            if ($request_method != 'GET') {
-               set $auth_request 'http://auth:8080/verify/posts';
+               set $auth_request "http://auth:8080/verify/posts";
            }
 
-           auth_request $auth_request;
-           include /etc/nginx/conf.d/header.conf;
+           # Check if $auth_request is a valid URL before using it
+           if ($auth_request != '') {
+               auth_request $auth_request;
+           }
 
            set $post_id $2;
 
-           # $post_id가 빈 문자열일 경우 처리
-           if ($post_id = '') {
-               set $post_path "/board/posts";
-           }
-
-           # $post_id가 존재할 경우 처리
+           # Set $post_path based on $post_id
+           set $post_path "/board/posts";
            if ($post_id != '') {
-               set $post_path "/board/posts/$post_id";
+               set $post_path "$post_path/$post_id";
            }
 
-           proxyy_pass http://board:8080$post_path;
+           proxy_pass http://board:8080$post_path;
        }
-
 
         location ~ /board/posts/(.*)/comments(/(.*))?$ {
             set $auth_request '';
+            include /etc/nginx/conf.d/header.conf;
 
             if ($request_method != 'GET') {
-                set $auth_request 'http://auth:8080/verify/comments';
+                set $auth_request "http://auth:8080/verify/comments";
             }
 
             auth_request $auth_request;
-            include /etc/nginx/conf.d/header.conf;
 
             set $post_id $1;
             set $comment_id $3;
 
-            # Construct the comments path directly
-            if ($comment_id = '') {
-                set $comments_path "/board/posts/$post_id/comments";
-            }
+            set $comments_path "/board/posts/$post_id/comments";
 
             if ($comment_id != '') {
                 set $comments_path "/board/posts/$post_id/comments/$comment_id";
