--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -76,23 +76,37 @@ server {
            include /etc/nginx/conf.d/header.conf;
 
            if ($request_method != 'GET') {
-               set $auth_request "http://auth:8080/verify/posts";
-           }
-
-           # Check if $auth_request is a valid URL before using it
-           if ($auth_request != '') {
-               auth_request $auth_request;
+               rewrite .* /auth/board/posts$1 last;
            }
 
            set $post_id $2;
-
-           # Set $post_path based on $post_id
            set $post_path "/board/posts";
            if ($post_id != '') {
                set $post_path "$post_path/$post_id";
            }
 
            proxy_pass http://board:8080$post_path;
+       }
+
+       location ~ /auth/board/posts(/(.*))?$ {
+            internal;
+            include /etc/nginx/conf.d/header.conf;
+            auth_request /verify/posts;
+
+            set $post_id $2;
+            set $post_path "/board/posts";
+
+            if ($post_id != '') {
+               set $post_path "$post_path/$post_id";
+            }
+
+            proxy_pass http://board:8080$post_path;
+       }
+
+       location /verify/posts {
+            internal;
+            include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://auth:8080/verify/posts;
        }
 
         location ~ /board/posts/(.*)/comments(/(.*))?$ {
