--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -72,35 +72,24 @@ server {
        }
 
        location ~ /board/posts(/(.*))?$ {
-           set $auth_request '';
-           include /etc/nginx/conf.d/header.conf;
-
-           if ($request_method != 'GET') {
-               rewrite .* /auth/board/posts$1 last;
-           }
-
-           set $post_id $2;
-           set $post_path "/board/posts";
-           if ($post_id != '') {
-               set $post_path "$post_path/$post_id";
-           }
-
-           proxy_pass http://board:8080$post_path;
-       }
-
-       location ~ /auth/board/posts(/(.*))?$ {
-            internal;
+            set $auth_request '';
             include /etc/nginx/conf.d/header.conf;
-            auth_request /verify/posts;
 
-            set $post_id $2;
-            set $post_path "/board/posts";
-
-            if ($post_id != '') {
-               set $post_path "$post_path/$post_id";
+            if ($request_method != 'GET') {
+                set $auth_request /verify/posts;
             }
 
-            proxy_pass http://board:8080$post_path;
+            auth_request $auth_request;
+
+            set $post_id $2;
+
+            set $posts_path "/board/posts";
+
+            if ($post_id != '') {
+                set $posts_path $posts_path/$post_id;
+            }
+
+            proxy_pass http://board:8080$posts_path;
        }
 
        location /verify/posts {
