--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -71,18 +71,17 @@ server {
             proxy_pass http://todo:8080/$1;
        }
 
+       map $request_method $auth_posts {
+            default /verify/posts;
+            GET "";
+       }
+
        location ~ /board/posts(/(.*))?$ {
-            set $auth_request '';
             include /etc/nginx/conf.d/header.conf;
 
-            if ($request_method != 'GET') {
-                set $auth_request /verify/posts;
-            }
-
-            auth_request $auth_request;
+            auth_request $auth_posts;
 
             set $post_id $2;
-
             set $posts_path "/board/posts";
 
             if ($post_id != '') {
