fix: /board proxy_pass 추가 + 리다이렉션 로직 롤백

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -1,8 +1,3 @@
-map $request_method $auth_posts {
-    default /verify/posts;
-    GET "";
-}
-
 server {
     listen       80;
     listen  [::]:80;
@@ -63,6 +58,11 @@ server {
             proxy_pass http://swagger-auth:8080;
         }
 
+        location = /board {
+            proxy_pass http://board:8080/board;
+            include /etc/nginx/conf.d/header.conf;
+        }
+
        location ~* /todo/(.*)$ {
             set $auth_request '';
 
@@ -76,22 +76,27 @@ server {
             proxy_pass http://todo:8080/$1;
        }
 
-       location ~ /board/posts(/(.*))?$ {
+       location ~ /board/posts/(/(.*))?$ {
+            set $auth_request '';
             include /etc/nginx/conf.d/header.conf;
 
-            auth_request $auth_posts;
+            if ($request_method != 'GET') {
+                set $auth_request /verify/posts;
+            }
+
+            auth_request $auth_request;
 
             set $post_id $2;
             set $posts_path "/board/posts";
 
-            if ($post_id != '') {
-                set $posts_path $posts_path/$post_id;
+            if ($comment_id != '') {
+                set $posts_path "/board/posts/$post_id";
             }
 
             proxy_pass http://board:8080$posts_path;
-       }
+        }
 
-       location /verify/posts {
+       location = /verify/posts {
             internal;
             proxy_pass http://auth:8080/verify/posts;
        }
