--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -78,8 +78,6 @@ server {
 
        location ~ /board/posts/(/(.*))?$ {
             set $auth_request '';
-            include /etc/nginx/conf.d/header.conf;
-
             if ($request_method != 'GET') {
                 set $auth_request /verify/posts;
             }
@@ -87,13 +85,14 @@ server {
             auth_request $auth_request;
 
             set $post_id $2;
-            set $posts_path "/board/posts";
+            set $posts_path /board/posts;
 
-            if ($comment_id != '') {
-                set $posts_path "/board/posts/$post_id";
+            if ($post_id != '') {
+                set $posts_path /board/posts/$post_id;
             }
 
             proxy_pass http://board:8080$posts_path;
+            include /etc/nginx/conf.d/header.conf;
         }
 
        location = /verify/posts {
