fix: /board/posts -> /board 리다이렉트 응답 코드 수정 (307->302)

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -63,17 +63,34 @@ server {
             include /etc/nginx/conf.d/header.conf;
         }
 
-       location ~* /todo/(.*)$ {
+        location = /todo {
+            proxy_pass http://todo:8080/todo;
+            include /etc/nginx/conf.d/header.conf;
+        }
+
+       location ~* /todo/posts(/(.*))?$ {
             set $auth_request '';
 
             if ($request_method != 'GET') {
-                set $auth_request '/verify';
+                set $auth_request '/verify/todo';
             }
 
             auth_request $auth_request;
 
+            set $todo_id $2;
+            set $todo_path /todo/posts;
+
+            if ($todo_id != '') {
+                set $todo_path /todo/posts/$todo_id;
+            }
+
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://todo:8080/$1;
+            proxy_pass http://todo:8080$todo_path;
+       }
+
+       location = /verify/todo {
+            internal;
+            proxy_pass http://auth:8080/verify/todo;
        }
 
        location ~ /board/posts/(/(.*))?$ {
