fix: redirect.conf 수정 + default.conf 삭제 + nginx 배포 시 service nginx reload->restart로 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -19,7 +19,7 @@ server {
 
        location = / {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth:8080;
+            proxy_pass https://kbc-office-frontend.vercel.app/;
        }
 
        # API 엔드포인트 설정
@@ -52,23 +52,18 @@ server {
             proxy_pass http://auth:8080/reissue;
        }
 
-        location = /docs/auth {
+       location = /docs/auth {
             rewrite ^/docs/.*$ break;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://swagger-auth:8080;
-        }
+       }
 
-        location = /board {
+       location = /board {
             proxy_pass http://board:8080/board;
             include /etc/nginx/conf.d/header.conf;
-        }
+       }
 
-        location = /todo {
-            proxy_pass http://todo:8080/todo;
-            include /etc/nginx/conf.d/header.conf;
-        }
-
-       location ~* /todo/posts(/(.*))?$ {
+       location /todo {
             set $auth_request '';
 
             if ($request_method != 'GET') {
@@ -77,15 +72,8 @@ server {
 
             auth_request $auth_request;
 
-            set $todo_id $2;
-            set $todo_path /todo/posts;
-
-            if ($todo_id != '') {
-                set $todo_path /todo/posts/$todo_id;
-            }
-
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://todo:8080$todo_path;
+            proxy_pass http://todo:8080/todo;
        }
 
        location = /verify/todo {
@@ -93,7 +81,7 @@ server {
             proxy_pass http://auth:8080/verify/todo;
        }
 
-       location ~ /board/posts/(/(.*))?$ {
+       location /board {
             set $auth_request '';
             if ($request_method != 'GET') {
                 set $auth_request /verify/posts;
@@ -101,42 +89,12 @@ server {
 
             auth_request $auth_request;
 
-            set $post_id $2;
-            set $posts_path /board/posts;
-
-            if ($post_id != '') {
-                set $posts_path /board/posts/$post_id;
-            }
-
-            proxy_pass http://board:8080$posts_path;
+            proxy_pass http://board:8080/board;
             include /etc/nginx/conf.d/header.conf;
-        }
+       }
 
        location = /verify/posts {
             internal;
             proxy_pass http://auth:8080/verify/posts;
        }
-
-        location ~ /board/posts/(.*)/comments(/(.*))?$ {
-            set $auth_request '';
-            include /etc/nginx/conf.d/header.conf;
-
-            if ($request_method != 'GET') {
-                set $auth_request "http://auth:8080/verify/comments";
-            }
-
-            auth_request $auth_request;
-
-            set $post_id $1;
-            set $comment_id $3;
-
-            set $comments_path "/board/posts/$post_id/comments";
-
-            if ($comment_id != '') {
-                set $comments_path "/board/posts/$post_id/comments/$comment_id";
-            }
-
-            proxy_pass http://board:8080$comments_path;
-        }
-
 }
