fix: redirect.conf 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -53,14 +53,8 @@ server {
        }
 
        location = /docs/auth {
-            rewrite ^/docs/.*$ break;
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://swagger-auth:8080;
-       }
-
-       location = /board {
-            proxy_pass http://board:8080/board;
-            include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://auth:8080;
        }
 
        location /todo {
@@ -89,12 +83,13 @@ server {
 
             auth_request $auth_request;
 
-            proxy_pass http://board:8080/board;
+            proxy_pass http://board:8080;
             include /etc/nginx/conf.d/header.conf;
        }
 
        location = /verify/posts {
             internal;
             proxy_pass http://auth:8080/verify/posts;
+            include /etc/nginx/conf.d/header.conf;
        }
 }
