add: swagger-auth location 추가 + auth swagger 리다이렉트 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -57,6 +57,12 @@ server {
             proxy_pass http://auth:8080;
        }
 
+       location = /swagger-auth {
+            rewrite ^/swagger-auth / break;
+            include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://swagger-auth:8080;
+       }
+
        location /todo {
             set $auth_request '';
 
