--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   nginx:
     container_name: nginx
-    image: nginx
+    image: nginx:alpine
     restart: always
     ports:
       - 80:80
