fix: nginx redirect conf 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -18,6 +18,27 @@ server {
        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
 
+upstream auth {
+	server auth:8080;
+}
+
+upstream board {
+    server board:8080;
+}
+
+upsteram todo {
+    server todo:8080;
+}
+
+upstream front {
+    server kbc-office-frontend.vercel.app/;
+}
+
+upstream swagger_auth {
+    server swagger-auth:8080;
+}
+
+
 server {
        listen  443 ssl;
        listen [::]:443;
@@ -29,25 +50,27 @@ server {
        include /etc/letsencrypt/options-ssl-nginx.conf;
        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+
+
        location = / {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass https://kbc-office-frontend.vercel.app/;
+            proxy_pass https://front;
        }
 
        # API 엔드포인트 설정
        location = /login {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth:8080/login;
+            proxy_pass http://auth/login;
        }
 
        location = /logout {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth:8080/logout;
+            proxy_pass http://auth/logout;
        }
 
        location = /join {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth:8080/join;
+            proxy_pass http://auth/join;
        }
 
        location /user {
@@ -56,23 +79,23 @@ server {
             }
 
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth:8080/user;
+            proxy_pass http://auth/user;
        }
 
        location = /reissue {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth:8080/reissue;
+            proxy_pass http://auth/reissue;
        }
 
        location = /docs/auth {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth:8080;
+            proxy_pass http://auth;
        }
 
        location = /swagger-auth {
             rewrite ^/swagger-auth / break;
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://swagger-auth:8080;
+            proxy_pass http://swagger-auth;
        }
 
        location /todo {
@@ -85,12 +108,12 @@ server {
             auth_request $auth_request;
 
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://todo:8080/todo;
+            proxy_pass http://todo/todo;
        }
 
        location = /verify/todo {
             internal;
-            proxy_pass http://auth:8080/verify/todo;
+            proxy_pass http://auth/verify/todo;
        }
 
        location /board {
@@ -101,13 +124,13 @@ server {
 
             auth_request $auth_request;
 
-            proxy_pass http://board:8080;
-            include /etc/nginx/conf.d/header.conf;
-       }
+            location /verify/posts {
+                 internal;
+                 proxy_pass http://auth;
+                 include /etc/nginx/conf.d/header.conf;
+            }
 
-       location = /verify/posts {
-            internal;
-            proxy_pass http://auth:8080/verify/posts;
+            proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
 }
