fix: nginx redirect conf 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -31,7 +31,7 @@ upsteram todo {
 }
 
 upstream front {
-    server kbc-office-frontend.vercel.app/;
+    server auth:8080;
 }
 
 upstream swagger_auth {
@@ -95,6 +95,7 @@ server {
        location = /swagger-auth {
             rewrite ^/swagger-auth / break;
             include /etc/nginx/conf.d/header.conf;
+            add_header 'Access-Control-Allow-Origin' '*';
             proxy_pass http://swagger-auth;
        }
 
@@ -102,11 +103,10 @@ server {
             set $auth_request '';
 
             if ($request_method != 'GET') {
-                set $auth_request '/verify/todo';
+                set $auth_request /verify/todo;
             }
 
             auth_request $auth_request;
-
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://todo/todo;
        }
@@ -118,19 +118,19 @@ server {
 
        location /board {
             set $auth_request '';
-            if ($request_method != 'GET') {
+            if ($request_method != GET) {
                 set $auth_request /verify/posts;
             }
 
             auth_request $auth_request;
 
-            location /verify/posts {
-                 internal;
-                 proxy_pass http://auth;
-                 include /etc/nginx/conf.d/header.conf;
-            }
-
             proxy_pass http://board;
+            include /etc/nginx/conf.d/header.conf;
+       }
+
+       location = /verify/posts {
+            internal;
+            proxy_pass http://auth;
             include /etc/nginx/conf.d/header.conf;
        }
 }
