fix: nginx redirect conf 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -26,7 +26,7 @@ upstream board {
     server board:8080;
 }
 
-upsteram todo {
+upstream todo {
     server todo:8080;
 }
 
@@ -114,6 +114,11 @@ server {
        location = /verify/todo {
             internal;
             proxy_pass http://auth/verify/todo;
+       }
+
+       location = /board {
+            proxy_pass http://board;
+            inclulde /etc/nginx/conf.d/header.conf;
        }
 
        location /board {
