--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -8,3 +8,7 @@ proxy_set_header accept "application/json";
 proxy_set_header Authorization $http_authorization;
 proxy_set_header Cookie $http_cookie;
 proxy_http_version 1.1;
+add_header 'Access-Control-Allow-Origin' $allowed_origin always;
+add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
+add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+add_header 'Access-Control-Allow-Credentials' 'true';
