--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -1,14 +1,13 @@
 proxy_set_header Host $host;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header X-Forwarded-Proto $scheme;
+#proxy_set_header X-Forwarded-Proto $scheme;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header accept "application/json";
+proxy_set_header Accept "application/json";
 proxy_set_header Authorization $http_authorization;
 proxy_set_header Cookie $http_cookie;
 proxy_http_version 1.1;
 add_header 'Access-Control-Allow-Origin' $allowed_origin always;
-add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
 add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
 add_header 'Access-Control-Allow-Credentials' 'true';
