fix: nginx 오타 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -106,7 +106,7 @@ server {
 
        location = /board {
             proxy_pass http://board;
-            inclulde /etc/nginx/conf.d/header.conf;
+            include /etc/nginx/conf.d/header.conf;
        }
 
        location /board {
