--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -8,6 +8,6 @@ proxy_set_header Accept "application/json";
 proxy_set_header Authorization $http_authorization;
 proxy_set_header Cookie $http_cookie;
 proxy_http_version 1.1;
-add_header 'Access-Control-Allow-Origin' $allowed_origin always;
+add_header 'Access-Control-Allow-Origin' '*' always;
 add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
 add_header 'Access-Control-Allow-Credentials' 'true';
