fix: nginx auth request 로직 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -110,19 +110,21 @@ server {
        }
 
        location /board {
-            set $auth_request '';
             if ($request_method != GET) {
-                set $auth_request /verify/posts;
+                rewrite .* /auth/board last;
             }
-
-            auth_request $auth_request;
 
             proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
 
+       location = /auth/board {
+            auth_request /verify/posts;
+            proxy_pass http://board;
+            include /etc/nginx/conf.d/header.conf;
+       }
+
        location = /verify/posts {
-            internal;
             proxy_pass http://auth;
             include /etc/nginx/conf.d/header.conf;
        }
