--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -8,7 +8,8 @@ plugins {
 
 openapi3 {
 	servers = [
-			{ url = "https://harpsharp.com"}
+			{ url = "https://harpsharp.com"},
+			{ url = "http://harpsharp.com"}
 	]
 	title = "Harp Sharp Auth API"
 	description = "Harp Sharp 회원가입, 회원 정보 수정, JWT 인증/인가와 관련된 API입니다."
