fix: nginx swagger-auth 설정 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -85,6 +85,14 @@ server {
             include /etc/nginx/conf.d/header.conf;
             add_header 'Access-Control-Allow-Origin' '*';
             proxy_pass http://swagger-auth;
+
+            location ~ swagger-initializer.js {
+                proxy_pass http://swagger-auth;
+            }
+
+            location ~* \.(?:json|yml|yaml)$ {
+                proxy_pass http://swagger-auth;
+            }
        }
 
        location /todo {
@@ -111,20 +119,20 @@ server {
 
        location /board {
             if ($request_method != GET) {
-                rewrite .* /auth/board last;
+                rewrite .* /auth$1 last;
             }
 
             proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
 
-       location = /auth/board {
+       location /auth/board(.*)?$ {
             auth_request /verify/posts;
-            proxy_pass http://board;
+            proxy_pass http://board$1;
             include /etc/nginx/conf.d/header.conf;
        }
 
-       location = /verify/posts {
+       location /verify/posts {
             proxy_pass http://auth;
             include /etc/nginx/conf.d/header.conf;
        }
