fix: nginx swagger-auth 설정 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -80,19 +80,11 @@ server {
             proxy_pass http://auth;
        }
 
-       location = /swagger-auth {
+       location /swagger-auth {
             rewrite ^/swagger-auth / break;
             include /etc/nginx/conf.d/header.conf;
             add_header 'Access-Control-Allow-Origin' '*';
             proxy_pass http://swagger-auth;
-
-            location ~ swagger-initializer.js {
-                proxy_pass http://swagger-auth;
-            }
-
-            location ~* \.(?:json|yml|yaml)$ {
-                proxy_pass http://swagger-auth;
-            }
        }
 
        location /todo {
