fix: nginx swagger-auth 설정 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -109,7 +109,7 @@ server {
             include /etc/nginx/conf.d/header.conf;
        }
 
-       location /board {
+       location /board(.*)?$ {
             if ($request_method != GET) {
                 rewrite .* /auth$1 last;
             }
