fix: nginx /board 정규식 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -81,7 +81,7 @@ server {
        }
 
        location /swagger-auth {
-            rewrite ^/swagger-auth / break;
+            rewrite ^/swagger-auth break;
             include /etc/nginx/conf.d/header.conf;
             add_header 'Access-Control-Allow-Origin' '*';
             proxy_pass http://swagger-auth;
