fix: nginx /board 정규식 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -109,9 +109,9 @@ server {
             include /etc/nginx/conf.d/header.conf;
        }
 
-       location /board(.*)?$ {
+       location /board/posts(.*)?$ {
             if ($request_method != GET) {
-                rewrite .* /auth$1 last;
+                rewrite .* /auth/board$1 last;
             }
 
             proxy_pass http://board;
@@ -120,7 +120,7 @@ server {
 
        location /auth/board(.*)?$ {
             auth_request /verify/posts;
-            proxy_pass http://board$1;
+            proxy_pass http://board/board$1;
             include /etc/nginx/conf.d/header.conf;
        }
 
