--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -109,18 +109,18 @@ server {
             include /etc/nginx/conf.d/header.conf;
        }
 
-       location /board/posts(.*)?$ {
+       location /board/posts {
             if ($request_method != GET) {
-                rewrite .* /auth/board$1 last;
+                rewrite .* /auth/board/posts last;
             }
 
             proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
 
-       location /auth/board(.*)?$ {
+       location /auth/board/posts {
             auth_request /verify/posts;
-            proxy_pass http://board/board$1;
+            proxy_pass http://board/board/posts;
             include /etc/nginx/conf.d/header.conf;
        }
 
