fix: nginx redirect.conf /board 패턴 수정 + postMapper::toMap(List<Post>) 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -114,18 +114,14 @@ server {
        }
 
        location /auth/board/posts {
+            rewrite .* /board/posts break;
             auth_request /verify/posts;
-            proxy_pass http://board/board/posts;
+            proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
 
        location /verify/posts {
             proxy_pass http://auth;
-            include /etc/nginx/conf.d/header.conf;
-       }
-
-       location = /board {
-            proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
 }
