--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -38,11 +38,9 @@ server {
        include /etc/letsencrypt/options-ssl-nginx.conf;
        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-
-
        location = / {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass https://front;
+            proxy_pass http://front;
        }
 
        # API 엔드포인트 설정
