add: proxy_intercept_errors 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -112,8 +112,11 @@ server {
        }
 
        location /auth/board/posts {
-            rewrite .* /board/posts break;
             auth_request /verify/posts;
+            proxy_intercept_errors on;
+            error_page 408 = @send_408;
+            
+            rewrite .* /board/posts break;
             proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
