add: proxy_intercept_errors 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -115,10 +115,14 @@ server {
             auth_request /verify/posts;
             proxy_intercept_errors on;
             error_page 408 = @send_408;
-            
+
             rewrite .* /board/posts break;
             proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
+       }
+
+       location @send_408 {
+            return 408 "Request Timeout";
        }
 
        location /verify/posts {
