fix: 검증 과정 간소화

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -103,20 +103,8 @@ server {
        }
 
        location /board/posts {
-            if ($request_method != GET) {
-                rewrite .* /auth/board/posts last;
-            }
+            auth_request /verify/posts
 
-            proxy_pass http://board;
-            include /etc/nginx/conf.d/header.conf;
-       }
-
-       location /auth/board/posts {
-            auth_request /verify/posts;
-            proxy_intercept_errors on;
-            error_page 408 = @send_408;
-
-            rewrite .* /board/posts break;
             proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
@@ -127,6 +115,5 @@ server {
 
        location /verify/posts {
             proxy_pass http://auth;
-            include /etc/nginx/conf.d/header.conf;
        }
 }
