--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,11 @@ http {
 
     keepalive_timeout  65;
 
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
+
     #gzip  on;
 
     include /etc/nginx/conf.d/redirect.conf;
