fix: header.conf 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -90,7 +90,7 @@ server {
        }
 
        location /board/posts {
-            auth_request /verify/posts
+            auth_request /verify/posts;
 
             proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
