--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -6,6 +6,7 @@ proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header Accept "application/json";
 proxy_set_header Authorization $http_authorization;
 proxy_http_version 1.1;
-add_header 'Access-Control-Allow-Origin' '*' always;
-add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
 add_header 'Access-Control-Allow-Credentials' 'true';
+add_header "Access-Control-Allow-Origin" $cors_allow_origin;
+add_header "Access-Control-Allow-Headers" "DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Authorization";
+add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
