--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -86,6 +86,7 @@ server {
 
        location /verify/posts {
             proxy_pass http://auth;
+            include /etc/nginx/conf.d/header.conf;
        }
 
        location /board/posts {
