fix: nginx location = /board 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -89,6 +89,11 @@ server {
             include /etc/nginx/conf.d/header.conf;
        }
 
+       location = /board {
+            proxy_pass http://board;
+            include /etc/nginx/conf.d/header.conf;
+       }
+
        location /board/posts {
             auth_request /verify/posts;
 
@@ -99,6 +104,4 @@ server {
        location @send_408 {
             return 408 "Request Timeout";
        }
-
-
 }
