fix: verify에서 request body로 인한 인증 로직 제거 + /board와 /todo로 향하는 요청 중 GET을 제외한 모든 요청은 auth_request /verify를 거치도록 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -84,9 +84,12 @@ server {
             proxy_pass http://swagger-auth;
        }
 
-       location /verify/posts {
+       location = /verify {
             proxy_pass http://auth;
             include /etc/nginx/conf.d/header.conf;
+            proxy_pass_request_body off;
+            proxy_set_header Content-Length "";
+            proxy_set_header X-Original-URI $request_uri;
        }
 
        location = /board {
@@ -95,13 +98,20 @@ server {
        }
 
        location /board/posts {
-            auth_request /verify/posts;
+            limit_except GET {
+                auth_request /verify;
+            }
 
             proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
 
-       location @send_408 {
-            return 408 "Request Timeout";
+       location /todo/posts {
+            limit_except GET {
+                auth_request /verify;
+            }
+
+            proxy_pass http://todo;
+            include /etc/nginx/conf.d/header.conf;
        }
 }
