add: conditional auth request 로직 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -72,19 +72,14 @@ server {
             proxy_pass http://auth/reissue;
        }
 
-       location = /docs/auth {
-            include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth;
-       }
-
        location /swagger-auth {
             rewrite ^/swagger-auth break;
             include /etc/nginx/conf.d/header.conf;
-            add_header 'Access-Control-Allow-Origin' '*';
             proxy_pass http://swagger-auth;
        }
 
        location = /verify {
+            internal;
             proxy_pass http://auth;
             include /etc/nginx/conf.d/header.conf;
        }
@@ -95,14 +90,23 @@ server {
        }
 
        location /board/posts {
-            auth_request /verify;
+            if ($request_method = GET) {
+                rewrite ^ /internal$uri last;
+            }
 
+            auth_request /verify;
             proxy_pass http://board;
             include /etc/nginx/conf.d/header.conf;
        }
 
+       location /internal/board/posts {
+            internal;
+            rewrite ^/internal(?<realuri>/.*)$ $realuri break;
+            proxy_pass http://board;
+            include /etc/nginx/conf.d/header.conf;
+       }
 
-       location /todo/posts {
+       location /todo/posts/write {
             auth_request /verify;
 
             proxy_pass http://todo;
