add: get /posts/{postId}/comments .. 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -106,7 +106,7 @@ server {
             include /etc/nginx/conf.d/header.conf;
        }
 
-       location /todo/posts/write {
+       location /todo/posts {
             auth_request /verify;
 
             proxy_pass http://todo;
