--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -8,5 +8,5 @@ proxy_set_header Authorization $http_authorization;
 proxy_http_version 1.1;
 add_header 'Access-Control-Allow-Credentials' 'true';
 add_header "Access-Control-Allow-Origin" "*";
-add_header "Access-Control-Allow-Headers" "Content-Type, Authorization";
+add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH' always;
