add: ai 컨테이너 location 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -72,6 +72,11 @@ server {
             proxy_pass http://auth/reissue;
        }
 
+       location /gpt {
+            include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://gpt-4o;
+       }
+
        location /swagger-auth {
             rewrite ^/swagger-auth break;
             include /etc/nginx/conf.d/header.conf;
