test: ai 연결 테스트

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -26,6 +26,10 @@ upstream swagger_auth {
     server swagger-auth:8080;
 }
 
+upstream gpt {
+    server gpt-4o:5001;
+}
+
 server {
        listen  443 ssl;
        listen [::]:443;
@@ -72,9 +76,10 @@ server {
             proxy_pass http://auth/reissue;
        }
 
-       location /gpt {
+       location = /gpt {
+            rewrite ^/gpt$ /generate-text break;
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://gpt-4o;
+            proxy_pass http://gpt;
        }
 
        location /swagger-auth {
