fix: gpt-4o 경로 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -23,7 +23,7 @@ upstream front {
 }
 
 upstream swagger_auth {
-    server swagger-auth:8080;
+    server swaggeruth:8080;
 }
 
 upstream gpt {
@@ -76,10 +76,10 @@ server {
             proxy_pass http://auth/reissue;
        }
 
-       location = /gpt {
-            rewrite ^/gpt$ /generate-text break;
-            include /etc/nginx/conf.d/header.conf;
+       location /gpt {
+            rewrite ^/gpt(?<realuri>/.*)$ $realuri break;
             proxy_pass http://gpt;
+            include /etc/nginx/conf.d/header.conf;
        }
 
        location /swagger-auth {
